# Pokemon

./: .gitignore  pyproject.toml
src/pokemon/imageDownloader/: Downloader.py
