[tool.poetry]
name = "pokemon"
version = "0.1.0"
description = "The highest quality Pokemon images."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.32.3"
beautifulsoup4 = "4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
